Changes in @NEW@:
  o Build Changes:
    * An xml formatted log has been added to :debuginfo. This is in
      addition to the human readable log. The xml log contains the same
      information as the human readable log, plus additional contextual
      information useful for formatting the log data. (CNY-2487)

  o Bug Fixes:
    * Rollbacks could restore files from local rollbacks by overwriting
      existing contents rather than replacing the file. In addition,
      the operation was not journaled properly. (CNY-2596)
    * A bug in finding the sources required to build all the packages for
      a group that omitted replace() packages has been fixed.  This mainly
      affected rmake builds of group recipes. (CNY-2605)

Changes in 1.2.20:
  o Bug Fixes:
    * A bug that occasionally caused a thread deadlock when multiple
      threads access the local system Conary database concurrently has
      been fixed. (CNY-2586)
    * Checking out sources unpacks duplicate binary files (CNY-2543)
    * Derived packages use the revision which was shadowed from to find
      the version to derive from instead of the latest on the branch
      (CNY-2577)
    * A bug that occurred when rMake recursed through a group recipe
      that made use of the replace command has been fixed. (CNY-2606)

Changes in 1.2.19:
  o Client Changes:
    * A close() method has been added to UpdateJob objects. It is
      recommended to call the method explicitly instead of relying
      on the object to be collected when going out of scope.
      (CNY-2489)

  o Build Changes:
    * Conary now has support for group policies. Policies deriving from
      GroupEnforcementPolicy and ImageGroupEnforcementPolicy will be
      run on groups at the end of the cook process. (CNY-2378)
    * ImageGroup is now an attribute tracked in a group's troveInfo.
      This attribute is set for groups meant to define a complete,
      functional system, and implies that ImageGroupEnforcementPolicy